syntax = "proto3";
package exomonad.popup;

// UI popup protocol types for Zellij plugin integration.

// Definition of a popup dialog.
message PopupDefinition {
  string id = 1;                       // Unique popup identifier
  string title = 2;                    // Popup title
  repeated PopupComponent components = 3;
  string submit_label = 4;             // Label for submit button
  string cancel_label = 5;             // Label for cancel button
}

// A component within a popup.
message PopupComponent {
  string id = 1;                       // Component identifier
  oneof component {
    TextInput text_input = 10;
    TextArea text_area = 11;
    Checkbox checkbox = 12;
    RadioGroup radio_group = 13;
    Dropdown dropdown = 14;
    Button button = 15;
    Label label = 16;
    Divider divider = 17;
  }
}

// Single-line text input.
message TextInput {
  string label = 1;
  string placeholder = 2;
  string default_value = 3;
  bool required = 4;
  int32 max_length = 5;
}

// Multi-line text area.
message TextArea {
  string label = 1;
  string placeholder = 2;
  string default_value = 3;
  bool required = 4;
  int32 rows = 5;
}

// Boolean checkbox.
message Checkbox {
  string label = 1;
  bool default_checked = 2;
}

// Radio button group (single selection).
message RadioGroup {
  string label = 1;
  repeated RadioOption options = 2;
  string default_value = 3;
}

// Option in a radio group.
message RadioOption {
  string value = 1;
  string label = 2;
}

// Dropdown selection.
message Dropdown {
  string label = 1;
  repeated DropdownOption options = 2;
  string default_value = 3;
  bool allow_empty = 4;
}

// Option in a dropdown.
message DropdownOption {
  string value = 1;
  string label = 2;
}

// Clickable button (not submit/cancel).
message Button {
  string label = 1;
  string action = 2;                   // Action identifier
  string style = 3;                    // "primary", "secondary", "danger"
}

// Static text label.
message Label {
  string text = 1;
  string style = 2;                    // "heading", "paragraph", "warning"
}

// Visual divider.
message Divider {
  // No fields, just a visual separator
}

// User submission of a popup form.
message FormSubmission {
  string popup_id = 1;
  map<string, string> values = 2;      // Component ID -> value
  bool cancelled = 3;                  // True if user cancelled
}

// Response to a popup (from Zellij plugin to WASM).
message PopupResponse {
  string popup_id = 1;
  oneof response {
    FormSubmission submission = 2;
    PopupError error = 3;
  }
}

// Error from popup display.
message PopupError {
  string message = 1;
  string component_id = 2;             // Component that caused the error
}

// Visibility rules for conditional display.
message VisibilityRule {
  string target_component = 1;         // Component to show/hide
  string depends_on = 2;               // Component to watch
  oneof condition {
    string equals_value = 3;           // Show if equals this value
    bool is_checked = 4;               // Show if checkbox is checked/unchecked
    bool is_not_empty = 5;             // Show if field is not empty
  }
}
